--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">"Popular Movie "</string>
+    <string name="app_name">"Pop Movies "</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="movie_sort_popular">"Most Popular"</string>
     <string name="movie_sort_highest_rated">"Highest Rated"</string>
     <string name="movie_sort_key">"movieListingChoice"</string>
     <string name="movie_sort_key_default">"Most Popular"</string>
+    <string name="title_activity_movie_details">MovieDetailsActivity</string>
 
 
 </resources>
