Fixed Cursor for Movie Details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="movie_sort_key_default">"Most Popular"</string>
     <string name="title_activity_movie_details">MovieDetailsActivity</string>
     <string name="content_authority">com.popularmovie.android.appprotfolio.popularmovie</string>
+    <string name="bus_pg">bus_pg</string>
 
 
 </resources>
