--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="content_authority">com.popularmovie.android.appprotfolio.popularmovie</string>
     <string name="bus_pg">bus_pg</string>
     <string name="trailer_Fragment_heading">Trailer</string>
+    <string name="poster">movie</string>
 
 
 </resources>
